Bug 506444 - Jetpack causes startpage to be empty Use opacity to hide/reshow slidebar instead of visibility to avoid causing the current tab's xul:browser to go gray when going visibile.
--HG--
extra : rebase_source : fd35f6c22bd363aa635664efedc357d90be1585b

--- a/extension/content/css/browser.css
+++ b/extension/content/css/browser.css
@@ -4,5 +4,5 @@ hbox#browser {
 }
 
 #slidebar {
-  visibility: hidden;
+  opacity: 0;
 }
